2005-01-27  Peter Bartok  <pbartok@novell.com>

	* Color.cs (GetBrightness, GetSaturation, GetHue): Fixed calculations
	  of HSV numbers. Previous implementation returned wrong numbers and NaN
	  on achromatic colors

2005-01-27  Lluis Sanchez Gual  <lluis@novell.com>

	* PointConverter.cs, ImageFormatConverter.cs, RectangleConverter.cs,
	SizeConverter.cs, ColorConverter.cs, FontConverter.cs
	: Implemented support for InstanceDescriptor.

2005-01-26  Peter Bartok  <pbartok@novell.com>

	* Icon.cs (ToBitmap): Now sets transparency in according to
	  icon AND mask

2004-01-22 Jordi Mas i Hernandez <jordi@ximian.com>

        * gdipFunctions.cs: Fixes GdipGet* function signatures
        * FontFamily.cs: Fixes GdipGet* function calls
        * Font.cs: Fixes ToString method
        
2004-01-17 Jordi Mas i Hernandez <jordi@ximian.com>

        * Graphics.cs: calls XCloseDisplay on X11 when need it
        * gdipFunctions.cs: calls XCloseDisplay on X11 when need it

2004-12-27  Zoltan Varga  <vargaz@freemail.hu>

	* gdipFunctions.cs Image.cs: Fix marshalling of arrays on amd64.

2004-12-16  Peter Bartok  <pbartok@novell.com>

	* Graphics.cs (GetHdc): Removed Wine assumptions, the handle is now
	  equivalent to the gdi+ native object

	* Font.cs (GetHfont): Removed Wine assumptions, the handle is now
	  equivalent to the gdi+ native object

2004-12-09  Geoff Norton  <gnorton@customerdna.com>

	* carbonFunctions.cs: New carbon functions/structures
	* Graphics.cs: Update FromHwnd to work without being in the carbon eventing loop

2004-12-08  Geoff Norton  <gnorton@customerdna.com>

	* Graphics.cs:  Drop FromHwndWithSize; we can't change the public API
	Add Quartz support to FromHwnd marshalling a struct back with the ptr/width/height.

2004-12-07  Geoff Norton  <gnorton@customerdna.com>

        * Graphics.cs:  Add FromHwndWithSize for the MWF/Quartz backend
        * gdipFunctions.cs: Add the quartz dllimport into libgdiplus
