@@ -40,8 +40,9 @@ namespace System.Drawing
                 private IntPtr nativeRegion = IntPtr.Zero;
                 
 		public Region()
-		{                  
-			Status status = GDIPlus.GdipCreateRegion (out nativeRegion);
+		{
+			RectangleF inf = new RectangleF (-4194304, -4194304, 8388608, 8388608); 
+			Status status = GDIPlus.GdipCreateRegionRect (ref inf, out nativeRegion);
 			GDIPlus.CheckStatus (status);
 		}
 
